# parallel

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
1lab/: CMakeLists.txt
1lab/include/Matrix/: matrix.h
1lab/include/TimeCheck/: timer.h
include/Generate/: randomgen.h
include/Matrix/: defaultmult.h  parallelmult.h
lab1/: CMakeLists.txt  main.cpp
lab1/include/Generate/: randomgen.cpp  randomgen.h
lab1/include/Matrix/: Matrix.cpp  defaultmult.cpp  matrix.h  parallelmult.cpp
lab2/: CMakeLists.txt  main.cpp
lab3/: CMakeLists.txt  main.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/include/: Fork.cpp  Fork.h  Manager.cpp  Manager.h  Wiseman.cpp  Wiseman.h
lab4/logs/: Manager.txt  wiseman1.txt  wiseman2.txt  wiseman3.txt  wiseman4.txt  wiseman5.txt
lab5/life/: CMakeLists.txt  main.cpp
lab5/sync/: CMakeLists.txt  main.cpp
